Add the slide in the configuration

--- a/evaluating.ipynb
+++ b/evaluating.ipynb
@@ -37,6 +37,7 @@
    "source": [
     "# Set the lame names\n",
     "lames = [\"12AG01290_19\", \"12AG01290_26\", \"13AG00043_26\"]\n",
+    "slide = \"PANCKm-CD8r\"\n",
     "label = \"CD8\"\n",
     "min_size = 10"
    ]
@@ -81,8 +82,8 @@
     "img_tiles, mask_tiles = [], []\n",
     "for i, lame in enumerate(lames):\n",
     "    # Load the image and the mask\n",
-    "    img = io.imread(f'data/{lame}/results/images_aligned/PANCKm-CD8r.ome.tiff')\n",
-    "    mask = io.imread(f'data/{lame}/results/masks/PANCKm-CD8r_{label}_mask.png')\n",
+    "    img = io.imread(f'data/{lame}/results/images_aligned/{slide}.ome.tiff')\n",
+    "    mask = io.imread(f'data/{lame}/results/masks/{slide}_{label}_mask.png')\n",
     "\n",
     "    # Determine the center of the image\n",
     "    center = (img.shape[0]//2, img.shape[1]//2)\n",
