--- a/training.ipynb
+++ b/training.ipynb
@@ -12,7 +12,7 @@
     "from skimage import io\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import accuracy_score, mean_squared_error\n",
+    "from sklearn.metrics import mean_squared_error\n",
     "\n",
     "import random\n",
     "\n",
@@ -38,7 +38,7 @@
    "source": [
     "# Set the lame names\n",
     "lames = [\"12AG01290_19\", \"12AG01290_26\", \"13AG00043_26\"]\n",
-    "label = \"Tumor\"\n",
+    "label = \"CD8\"\n",
     "\n",
     "# Determine the length of the center square\n",
     "LENGTH = 2*10**4"
