Clean the mask and model names

--- a/training.ipynb
+++ b/training.ipynb
@@ -1349,15 +1349,8 @@
    ],
    "source": [
     "# Save the model\n",
-    "model.save_model(f\"models/xgboost_{label}_model.model\")"
+    "model.save_model(f\"models/xgboost_{label}.model\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
